# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
workspace(name = "cros")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

# See https://github.com/bazelbuild/bazel/issues/16644
# This allows intellij users to sync bazel targets and thus get proper debugger
# support, code completion, and cross-references.
http_archive(name = "intellij_aspect")

load("//bazel/ebuild:repositories.bzl", "rules_ebuild_repositories")

rules_ebuild_repositories()

load("//bazel/ebuild:deps.bzl", "rules_ebuild_dependencies")

# gazelle:repository_macro bazel/ebuild/deps.bzl%rules_ebuild_go_dependencies
rules_ebuild_dependencies()

load("//bazel/toolchains:toolchain_repositories.bzl", "toolchain_repositories")

toolchain_repositories()

load("//bazel/third_party:third_party_repositories.bzl", "third_party_repositories")

third_party_repositories()

load("//bazel/toolchains:register_toolchains.bzl", "load_toolchains")

load_toolchains()

load("//bazel/prebuilts:repositories.bzl", "prebuilts_dependencies")

prebuilts_dependencies()

load("//third_party/portage-stable:repositories.bzl", portage_stable_dependencies = "dependencies")

portage_stable_dependencies()

load("//third_party/chromiumos-overlay:repositories.bzl", chromiumos_overlay_dependencies = "dependencies")

chromiumos_overlay_dependencies()

load("//bazel/sdk:repositories.bzl", "cros_sdk_repositories")

cros_sdk_repositories()

load("//bazel/chrome:repositories.bzl", "cros_chrome_repositories")

cros_chrome_repositories()

new_local_repository(
    name = "chromite",
    build_file = "//bazel:BUILD.project-chromite",
    path = "../chromite",
)
