# Copyright 2024 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/build_defs/jinja_template:jinja_template.bzl", "jinja_template")

jinja_template(
    name = "cargo_toml",
    src = "cargo_toml.jinja2",
    visibility = ["//visibility:public"],
)
