# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

sh_binary(
    name = "download_prebuilt",
    srcs = ["download_prebuilt.sh"],
    visibility = ["//bazel:internal"],
)

# The path to your gsutil
string_flag(
    name = "gsutil_path",
    build_setting_default = "gsutil",
    visibility = ["//bazel:internal"],
)
