# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "primordial",
    # TODO: set this to false once the non-primordial toolchain is available.
    # When this value is false, when you try and build a target, it'll first
    # build the bootstrapped toolchain, which enters a transition to set this to
    # true, and uses that to build the bootstrapped toolchain.
    # When this value is true, we *only* use the primordial toolchain. This
    # means that we're unable to cross-compile, as the primordial toolchain
    # only works for the host.
    build_setting_default = True,
    visibility = ["//visibility:private"],
)

config_setting(
    name = "primordial_disabled",
    flag_values = {
        ":primordial": "False",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "primordial_enabled",
    flag_values = {
        ":primordial": "True",
    },
    visibility = ["//visibility:public"],
)
