# Copyright 2022 The ChromiumOS Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//bazel/ebuild:defs.bzl", "binary_package")

# sys-libs/pam needs this, but it looks missing in SDK and instead pulled in by
# BDEPEND.
binary_package(
    name = "docbook-xml-dtd-4_4",
    src = "@amd64_host_docbook_xml_dtd_4_4_r3//file",
    visibility = ["//visibility:public"],
)

# dev-libs/glib needs this, but it looks missing in SDK and instead pulled in by
# BDEPEND.
binary_package(
    name = "meson-format-array",
    src = "@amd64_host_meson_format_array_0//file",
    visibility = ["//visibility:public"],
)

# We need to pull in the rust cross compiler libs
binary_package(
    name = "rust",
    src = "@amd64_host_rust_1_62_1//file",
    visibility = ["//visibility:public"],
)

# Needed for hps-firmware
binary_package(
    name = "hps-sdk",
    src = "@amd64_host_hps_sdk_0_0_0_r4//file",
    visibility = ["//visibility:public"],
)

# x11-libs/libxcb needs this, but it looks missing in SDK and instead pulled in
# by BDEPEND.
binary_package(
    name = "xcb-proto",
    src = "@amd64_host_xcb_proto_1_14_1//file",
    visibility = ["//visibility:public"],
)
